remove rapidapi middleware
